Ajustes de labels e pagina de visualizar empresas

--- a/src/app/companies/companies-form/companies-form.component.html
+++ b/src/app/companies/companies-form/companies-form.component.html
@@ -189,46 +189,46 @@
     ></po-select>
     <po-select
       class="po-md-4"
-      name="Regime Tributação"
+      name="Regime Especial Tributação"
       [(ngModel)]="empresa.regime_especial_tributacao"
-      p-label="Regime Tributação"
+      p-label="Regime Especial Tributação"
       [p-options]="regimeEspecialTributacao"
     ></po-select>
     <po-divider class="po-sm-12" p-label="Ambientes"></po-divider>
     <po-select
       class="po-md-4"
-      name="Regime Tributação"
+      name="NF-e Ambiente"
       [(ngModel)]="empresa.nfe.ambiente"
-      p-label="Ambiente NF-e"
+      p-label="NF-e Ambiente"
       [p-options]="nfeAmbiente"
     ></po-select>
     <po-select
       class="po-md-4"
-      name="Regime Tributação"
+      name="MDF-e Ambiente"
       [(ngModel)]="empresa.mdfe.ambiente"
-      p-label="Ambiente MDF-e"
+      p-label="MDF-e Ambiente"
       [p-options]="mdfeAmbiente"
     ></po-select>
     <po-select
       class="po-md-4"
-      name="Regime Tributação"
+      name="CTE Ambiente"
       [(ngModel)]="empresa.cte.ambiente"
-      p-label="Ambiente CTE"
+      p-label="CTE Ambiente"
       [p-options]="cteAmbiente"
     ></po-select>
     <po-select
       class="po-md-4"
-      name="Regime Tributação"
+      name="CTE_OS Ambiente"
       [(ngModel)]="empresa.cte_os.ambiente"
-      p-label="Ambiente CTE_OS"
+      p-label="CTE_OS Ambiente"
       [p-options]="cte_osAmbiente"
     ></po-select>
     <po-divider class="po-sm-12" p-label="Ambiente NFS-e"></po-divider>
     <po-select
       class="po-md-3"
-      name="Regime Tributação"
+      name="NFS-e Ambiente"
       [(ngModel)]="empresa.nfse.ambiente"
-      p-label="Ambiente NFS-e"
+      p-label="NFS-e Ambiente"
       [p-options]="nfseAmbiente"
     ></po-select>
     <po-select
