--- a/src/app/companies/companies-form/companies-form.component.html
+++ b/src/app/companies/companies-form/companies-form.component.html
@@ -13,6 +13,7 @@
       [(ngModel)]="empresa.nome_razao_social"
       p-label="Nome / Razão Social"
       [p-disabled]="false"
+      p-required
     >
     </po-input>
     <po-input
@@ -102,7 +103,7 @@
 
     <po-input
       class="po-md-5"
-      name="cidade"
+      name="city"
       [(ngModel)]="empresa.endereco.cidade"
       p-required
       p-label="Cidade"
@@ -151,13 +152,27 @@
     </po-input>
     <po-divider class="po-sm-12" p-label="Certificado"></po-divider>
 
-    <po-input
+    <po-info
+      class="po-md-5"
+      p-label="Certificado digital (.pfx ou .p12) codificado em base64."
+    >
+    </po-info>
+
+    <po-upload
+      name="upload"
+      p-label="Envio de certificado"
+      p-url="https://po-sample-api.herokuapp.com/v1/uploads/addFile"
+    >
+    </po-upload>
+    <hr />
+    <!-- https://po-ui.io/documentation/po-upload -->
+    <!-- <po-input
       class="po-md-5"
       name="Certificado"
       [(ngModel)]="certificado.certificado"
       p-label="Certificado Base64"
       [p-disabled]="false"
-    ></po-input>
+    ></po-input> -->
     <po-input
       class="po-md-5"
       name="senha certificado"
