Ajuste autorização do GET

--- a/src/app/nfse/nfse-view/nfse-view.component.html
+++ b/src/app/nfse/nfse-view/nfse-view.component.html
@@ -7,9 +7,10 @@
   <po-divider p-label="Identificação"></po-divider>
 
   <div class="po-row">
-    <po-info class="po-md-5" p-label="Código" [p-value]="nfse.id"> </po-info>
+    <po-info class="po-md-5" p-label="Ambiente" [p-value]="nfseData.ambiente">
+    </po-info>
 
-    <po-info class="po-md-5" p-label="Nome" [p-value]="nfse.displayName">
+    <po-info class="po-md-5" p-label="NULO" [p-value]="nfseData.ambiente">
     </po-info>
   </div>
 </po-page-detail>
