--- a/src/app/nfse/nfse-view/nfse-view.component.html
+++ b/src/app/nfse/nfse-view/nfse-view.component.html
@@ -7,8 +7,7 @@
   <po-divider p-label="Identificação"></po-divider>
 
   <div class="po-row">
-    <po-info class="po-md-5" p-label="Ambiente" [p-value]="nfseData.ambiente">
-    </po-info>
+    <po-info class="po-md-5" p-label="ID" [p-value]="nfseData.id"> </po-info>
 
     <po-info class="po-md-5" p-label="NULO" [p-value]="nfseData.ambiente">
     </po-info>
