Ajuste property: 'identificacao_rps.numero'

--- a/src/app/nfse/nfse-form/nfse-form.component.html
+++ b/src/app/nfse/nfse-form/nfse-form.component.html
@@ -21,11 +21,12 @@
     { property: 'ambiente', label: 'User ID' },
     { property: 'referencia', label: 'User ID' },
     {
-      property: 'identificacao_rps.numero',
+      property:
+        'nfse.declaracao_prestacao_servico.rps.identificacao_rps.numero',
       label: 'Numero do RPS'
     },
     {
-      property: 'declaracao_prestacao_servico.rps.identificacao_rps.serie',
+      property: 'nfse.declaracao_prestacao_servico.rps.identificacao_rps.serie',
       label: 'Série RPS'
     },
     {
