Ajuste nova NFS-e - alguns campos estão presentes

--- a/src/app/nfse/nfse-form/nfse-form.component.html
+++ b/src/app/nfse/nfse-form/nfse-form.component.html
@@ -73,14 +73,14 @@
       [p-disabled]="false"
     >
     </po-input>
-    <po-input
+    <!-- <po-input
+      type="rps"
       class="po-md-5"
       name="number"
       [(ngModel)]="
         nfse.declaracao_prestacao_servico.rps.identificacao_rps.numero
       "
       p-label="Numero do RPS"
-      [p-disabled]="false"
     >
     </po-input>
     <po-input
@@ -100,8 +100,8 @@
       p-label="Data de emissão"
       [p-disabled]="false"
     >
-    </po-input>
-    <po-input
+    </po-input> -->
+    <!-- <po-input
       class="po-md-5"
       name="competencia"
       [(ngModel)]="nfse.declaracao_prestacao_servico.competencia"
@@ -116,7 +116,7 @@
       p-label="Natureza Tributação"
       [p-disabled]="false"
     >
-    </po-input>
+    </po-input> -->
 
     <!-- <po-page-dynamic-edit
   p-group-form="true"
