Ajuste do body do post

--- a/src/app/nfse/nfse-form/nfse-form.component.html
+++ b/src/app/nfse/nfse-form/nfse-form.component.html
@@ -155,7 +155,7 @@
       class="po-md-5"
       name="created_at"
       [(ngModel)]="nfsePost.rps.natureza_tributacao"
-      p-label="CPF / CNPJ"
+      p-label="Natureza Tributação"
       [p-disabled]="false"
     >
     </po-input>
