--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,8 @@
 <po-page-login
-  p-logo="https://po-ui.io/assets/po-logos/po_color.svg"
-  p-secondary-logo="https://po-ui.io/assets/po-logos/po_black.svg"
-  p-product-name="Integração Protheus"
+  p-logo="https://conceitho.com/wp-content/uploads/2018/11/Logo-Conceitho.jpg"
+  p-secondary-logo="https://conceitho.com/wp-content/uploads/2018/11/Logo-Conceitho.jpg"
+  p-product-name="Emissor de NF Online"
   [p-hide-remember-user]="hideRememberUser"
-  (p-login-submit)="loginSubmit($event)">
+  (p-login-submit)="loginSubmit($event)"
+>
 </po-page-login>
